k8s/mainnet/deployment-main.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: biatec
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: biatec-web-main-deployment
  namespace: biatec
spec:
  selector:
    matchLabels:
      app: biatec-web-main
  replicas: 1
  template:
    metadata:
      labels:
        app: biatec-web-main
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: biatec-web-main
          image: scholtz2/biatec-web:1.2026.09.18-main
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              protocol: TCP
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 10
            timeoutSeconds: 5
            failureThreshold: 2
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 20
            timeoutSeconds: 5
            failureThreshold: 2
            terminationGracePeriodSeconds: 1
          volumeMounts:
            - name: biatec-main-conf
              mountPath: /app/config.json
              subPath: config.json
      volumes:
        - name: biatec-main-conf
          configMap:
            name: biatec-main-conf

---
apiVersion: v1
kind: Service
metadata:
  name: biatec-mainnet-service
  namespace: biatec
spec:
  type: ClusterIP
  selector:
    app: biatec-web-main
  ports:
    - name: http
      protocol: TCP
      appProtocol: http
      port: 8080
      targetPort: 8080

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: biatec-web-main
  namespace: biatec
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    nginx.ingress.kubernetes.io/backend-protocol: 'HTTP'
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  tls:
    - hosts:
        - biatec.io
        - www.biatec.io
      secretName: tls-biatec.io
  rules:
    - host: biatec.io
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: biatec-mainnet-service
                port:
                  number: 8080
    - host: www.biatec.io
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: biatec-mainnet-service
                port:
                  number: 8080
